@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: October 11, 2008</p>
+      <p>Last Updated: October 15, 2008</p>
     </td>
   </tr>
 </table>
@@ -1134,7 +1134,8 @@ nuttx-0.3.17 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* Incorporate patch "[2164503] nuttx-0.3.16 does not build for ARM with USB disabled"
 	* Reduced the amount of memory reserved for USB serial control requests.  It
 	  was unnecessarily large.
-	* Add LPC214x SPI1 driver to interface with MMC on mcu123.com board.
+	* Added LPC214x SPI1 driver to interface with MMC on mcu123.com board.
+	* Added a simple SPI-based MMC/SD block driver
 
 pascal-0.1.3 2008-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
